fix: details marker alignment

--- a/components/01-atoms/details/details.pcss
+++ b/components/01-atoms/details/details.pcss
@@ -38,7 +38,6 @@
     
     span,
     > * {
-      display: inline-block;
       margin-inline-start: 0.25rem;
     }
     
